tests/snapshots/run_wpt_conformance__onnx_per-tensor_quantizeLinear_for_float32_4D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "quantizeLinear.https.any.js",
    "per-tensor quantizeLinear for float32 4D tensor",
    "onnx",
    "PASS",
)
