tests/snapshots/run_wpt_conformance__onnx_pow_float16_4D_base_tensor_and_4D_integer_exponent_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "pow.https.any.js",
    "pow float16 4D base tensor and 4D integer exponent tensor",
    "onnx",
    "PASS",
)
